--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                         <li class="header-menu-list_item"><a href="#">contact</a></li>
                     </ul>
                 </nav>
-                <input type="button" value="basket">
-                <input type="button" value="search">
+                <input type="button" value="" class="header-basket">
+                <input type="button" value="" class="header-search">
+            </div>
+            <div class="slider">
+
             </div>
         </header>
 
