+updated html +added a few images

--- a/index.html
+++ b/index.html
@@ -13,34 +13,242 @@
 <body>
 
     <div class="container">
-        <header>
-            <div class="header">
-                <a class="header-logo">
-                    <img src="" alt="" class="header-logo-img">
-                    <span class="header-logo-name">waxom</span>
-                </a>
-                <nav class="header-menu">
-                    <ul class="header-menu-list">
-                        <li class="header-menu-list_item"><a href="#">home</a></li>
-                        <li class="header-menu-list_item"><a href="#">about us</a></li>
-                        <li class="header-menu-list_item"><a href="#">portfolio</a></li>
-                        <li class="header-menu-list_item"><a href="#">features</a></li>
-                        <li class="header-menu-list_item"><a href="#">blog</a></li>
-                        <li class="header-menu-list_item"><a href="#">pricing</a></li>
-                        <li class="header-menu-list_item"><a href="#">shortcodes</a></li>
-                        <li class="header-menu-list_item"><a href="#">contact</a></li>
-                    </ul>
-                </nav>
-                <input type="button" value="" class="header-basket">
-                <input type="button" value="" class="header-search">
-            </div>
-            <div class="slider">
-
-            </div>
+        <header class="header">
+            <a class="header-logo">
+                <img src="" alt="logo" class="header-logo-img">
+                <span class="header-logo-name">waxom</span>
+            </a>
+            <nav class="header-menu">
+                <ul class="header-menu-list">
+                    <li class="header-menu-list_item"><a href="#">home</a></li>
+                    <li class="header-menu-list_item"><a href="#">about us</a></li>
+                    <li class="header-menu-list_item"><a href="#">portfolio</a></li>
+                    <li class="header-menu-list_item"><a href="#">features</a></li>
+                    <li class="header-menu-list_item"><a href="#">blog</a></li>
+                    <li class="header-menu-list_item"><a href="#">pricing</a></li>
+                    <li class="header-menu-list_item"><a href="#">shortcodes</a></li>
+                    <li class="header-menu-list_item"><a href="#">contact</a></li>
+                </ul>
+            </nav>
+            <button class="header-cart"></button>
+            <button class="header-search"></button>
+            <section class="header-slider">
+                <section class="header-slogan">
+                    <span class="header-slogan-caption-above">Unique and Modern Design</span>
+                    <span class="header-slogan-caption-below">Portfolio PSD Template</span>
+                    <p class="header-slogan-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim placerat facer possim assum.</p>
+                    <a href="#" class="header-slogan-button">get started</a>
+                </section>
+                <div class="header-slider-pages">
+                    <a href="#" class="header-slider-pages_item"></a>
+                    <a href="#" class="header-slider-pages_item"></a>
+                    <a href="#" class="header-slider-pages_item"></a>
+                    <a href="#" class="header-slider-pages_item"></a>
+                    <a href="#" class="header-slider-pages_item"></a>
+                </div>
+                <button class="header-slider-arrow-left"></button>
+                <button class="header-slider-arrow-right"></button>
+            </section>
         </header>
 
         <main>
-
+            <section class="services">
+                <div class="services_item">
+                    <span class="services_item-caption">web & app design</span>
+                    <p class="services_item-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</p>
+                </div>
+                <div class="services_item">
+                    <span class="services_item-caption">development</span>
+                    <p class="services_item-text">Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh
+                        euismod tincidunt ut laoreet.</p>
+                </div>
+                <div class="services_item">
+                    <span class="services_item-caption">customization</span>
+                    <p class="services_item-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</p>
+                </div>
+                <div class="services_item">
+                    <span class="services_item-caption">marketing</span>
+                    <p class="services_item-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                        imperdiet doming id quod mazim.</p>
+                </div>
+            </section>
+            <section class="realization">
+                <span class="realization-caption">Waxom is Realization of your Ideas.</span>
+                <p class="realization-text">Investigationes demonstraverunt lectores legere me lius quod ii legunt
+                    saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <img class="realization-image-left" src="" alt="image-left">
+                <img class="realization-image-right" src="" alt="image-right">
+                <img class="realization-image-center" src="" alt="image-center">
+            </section>
+            <aside class="ads-theme">
+                <div class="ads-theme-desc">
+                    <span class="ads-theme-desc_caption1">waxom</span>
+                    <span class="ads-theme-desc_caption2">Multipurpose WordPress Theme</span>
+                    <p class="ads-theme-desc-text">Don't Forget to Rate the Template. Thanks so much!</p>
+                </div>
+                <a href="#" class="ads-theme-button">purchase now</a>
+            </aside>
+            <section class="projects">
+                <span class="projects-caption">our latest projects.</span>
+                <p class="projects-text">Investigationes demonstraverunt lectores legere me lius quod ii legunt
+                    saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <div class="projects-categories">
+                    <button class="projects-categories_item">all</button>
+                    <button class="projects-categories_item">web design</button>
+                    <button class="projects-categories_item">mobile app</button>
+                    <button class="projects-categories_item">illustration</button>
+                    <button class="projects-categories_item">photography</button>
+                </div>
+                <article class="projects_item">
+                    <img src="" alt="project-image" class="projects_item-image" width="370" height="237">
+                    <div class="projects_item-desc">
+                        <span class="projects_item-caption">Claritas Etiam Processus</span>
+                        <span class="projects_item-catigories">Photography, Nature</span>
+                        <a href="#" class="projects_item-link"></a>
+                        <a href="#" class="projects_item-lupa"></a>
+                    </div>
+                </article>
+                <article class="projects_item">
+                    <img src="" alt="project-image" class="projects_item-image" width="370" height="237">
+                    <div class="projects_item-desc">
+                        <span class="projects_item-caption">Quam Nutamus Farum</span>
+                        <span class="projects_item-catigories">Graphic Design, Mock-Up</span>
+                        <a href="#" class="projects_item-link"></a>
+                        <a href="#" class="projects_item-lupa"></a>
+                    </div>
+                </article>
+                <article class="projects_item">
+                    <img src="" alt="project-image" class="projects_item-image" width="370" height="237">
+                    <div class="projects_item-desc">
+                        <span class="projects_item-caption">Usus Legentis Videntur</span>
+                        <span class="projects_item-catigories">Photography, Holiday</span>
+                        <a href="#" class="projects_item-link"></a>
+                        <a href="#" class="projects_item-lupa"></a>
+                    </div>
+                </article>
+                <article class="projects_item">
+                    <img src="" alt="project-image" class="projects_item-image" width="370" height="237">
+                    <div class="projects_item-desc">
+                        <span class="projects_item-caption">Claritas Etiam Processus</span>
+                        <span class="projects_item-catigories">Photography, Nature</span>
+                        <a href="#" class="projects_item-link"></a>
+                        <a href="#" class="projects_item-lupa"></a>
+                    </div>
+                </article>
+                <article class="projects_item">
+                    <img src="" alt="project-image" class="projects_item-image" width="370" height="237">
+                    <div class="projects_item-desc">
+                        <span class="projects_item-caption">Quam Nutamus Farum</span>
+                        <span class="projects_item-catigories">Graphic Design, Mock-Up</span>
+                        <a href="#" class="projects_item-link"></a>
+                        <a href="#" class="projects_item-lupa"></a>
+                    </div>
+                </article>
+                <article class="projects_item">
+                    <img src="" alt="project-image" class="projects_item-image" width="370" height="237">
+                    <div class="projects_item-desc">
+                        <span class="projects_item-caption">Usus Legentis Videntur</span>
+                        <span class="projects_item-catigories">Photography, Holiday</span>
+                        <a href="#" class="projects_item-link"></a>
+                        <a href="#" class="projects_item-lupa"></a>
+                    </div>
+                </article>
+                <button class="projects-load-more">load more</button>
+            </section>
+            <section class="video">
+                <div class="video-desc">
+                    <a href="#" class="video-play-button"></a>
+                    <span class="video-caption">waxom video presentation</span>
+                    <p class="video-text">Investigationes demonstraverunt lectores legere me lius quod ii legunt
+                        saepius, qui sequitur mutationem consuetudium.</p>
+                    <span class="video-time">03:26</span>
+                </div>
+            </section>
+            <section class="mobile">
+                <img src="" alt="mobile-image" class="mobile-img">
+                <div class="mobile-desc">
+                    <span class="mobile-caption">Excellent for Mobile Devices.</span>
+                    <p class="mobile-text">Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+                        lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores
+                        legere me lius quod ii legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum
+                        clari, fiant sollemnes in futurum.</p>
+                    <ul>
+                        <li>Nam liber tempor cum soluta nobis eleifend option;</li>
+                        <li>Option congue nihil imperdiet doming id quod mazim placerat facer;</li>
+                        <li>Eodem modo typi, qui nunc nobis videntur parum futurum;</li>
+                        <li>nvestigationes demonstraverunt lectores</li>
+                    </ul>
+                </div>
+            </section>
+            <section class="statistics">
+                <div class="statistics-item">
+                    <span class="statistics-value">3587</span>
+                    <span class="statistics-caption">satisfied clients</span>
+                </div>
+                <div class="statistics-item">
+                    <span class="statistics-value">207</span>
+                    <span class="statistics-caption">cups of coffee</span>
+                </div>
+                <div class="statistics-item">
+                    <span class="statistics-value">2500</span>
+                    <span class="statistics-caption">blog posts</span>
+                </div>
+                <div class="statistics-item">
+                    <span class="statistics-value">873</span>
+                    <span class="statistics-caption">likes</span>
+                </div>
+                <div class="statistics-item">
+                    <span class="statistics-value">900</span>
+                    <span class="statistics-caption">we launched</span>
+                </div>
+            </section>
+            <section class="posts">
+                <span class="posts-caption">recent posts.</span>
+                <p class="posts text">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
+                    Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
+                <article class="posts_item">
+                    <img src="" alt="" class="posts_item-img">
+                    <ul class="posts_item-pages">
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <span class="posts_item-caption"></span>
+                        <p class="posts_item-text"></p>
+                        <a href="#" class="posts_item-link"></a>
+                    </ul>
+                </article>
+                <article class="posts_item">
+                    <img src="" alt="" class="posts_item-img">
+                    <ul class="posts_item-pages">
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <span class="posts_item-caption"></span>
+                        <p class="posts_item-text"></p>
+                        <a href="#" class="posts_item-link"></a>
+                    </ul>
+                </article>
+                <article class="posts_item">
+                    <img src="" alt="" class="posts_item-img">
+                    <ul class="posts_item-pages">
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <liposts_item-pages_item></liposts_item-pages_item>
+                        <span class="posts_item-caption"></span>
+                        <p class="posts_item-text"></p>
+                        <a href="#" class="posts_item-link"></a>
+                    </ul>
+                </article>
+            </section>
         </main>
 
         <footer class="footer"></footer>
