--- a/index.html
+++ b/index.html
@@ -209,49 +209,130 @@
                 <span class="posts-caption">recent posts.</span>
                 <p class="posts text">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
                     Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.</p>
-                <article class="posts_item">
-                    <img src="" alt="" class="posts_item-img">
-                    <ul class="posts_item-pages">
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <span class="posts_item-caption"></span>
-                        <p class="posts_item-text"></p>
-                        <a href="#" class="posts_item-link"></a>
-                    </ul>
-                </article>
-                <article class="posts_item">
-                    <img src="" alt="" class="posts_item-img">
-                    <ul class="posts_item-pages">
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <span class="posts_item-caption"></span>
-                        <p class="posts_item-text"></p>
-                        <a href="#" class="posts_item-link"></a>
-                    </ul>
-                </article>
-                <article class="posts_item">
-                    <img src="" alt="" class="posts_item-img">
-                    <ul class="posts_item-pages">
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <liposts_item-pages_item></liposts_item-pages_item>
-                        <span class="posts_item-caption"></span>
-                        <p class="posts_item-text"></p>
-                        <a href="#" class="posts_item-link"></a>
-                    </ul>
-                </article>
+                <div class="posts-view">
+                    <article class="posts-view_item">
+                        <img src="" alt="" class="posts-view_item-img">
+                        <ul class="posts-view_item-pages">
+                            <li class="posts-view_item-pages_item"></li>
+                            <li class="posts-view_item-pages_item"></li>
+                            <li class="posts-view_item-pages_item"></li>
+                            <li class="posts-view_item-pages_item"></li>
+                            <li class="posts-view_item-pages_item"></li>
+                        </ul>
+                        <span class="posts-view_item-caption"></span>
+                        <p class="posts-view_item-text"></p>
+                        <a href="#" class="posts-view_item-link"></a>
+                        <span class="posts-view_item-day">30</span>
+                        <span class="posts-view_item-month">Sep.</span>
+                    </article>
+                    <article class="posts-view_item">
+                        <img src="" alt="" class="posts-view_item-img">
+                        <span class="posts-view_item-caption"></span>
+                        <p class="posts-view_item-text"></p>
+                        <a href="#" class="posts-view_item-link"></a>
+                        <span class="posts-view_item-day">30</span>
+                        <span class="posts-view_item-month">Sep.</span>
+                    </article>
+                    <article class="posts-view_item">
+                        <img src="" alt="" class="posts-view_item-img">
+                        <span class="posts-view_item-caption"></span>
+                        <p class="posts-view_item-text"></p>
+                        <a href="#" class="posts-view_item-link"></a>
+                        <span class="posts-view_item-day">30</span>
+                        <span class="posts-view_item-month">Sep.</span>
+                    </article>
+                </div>
+                <button class="posts-button_left"></button>
+                <button class="posts-button_right"></button>
+            </section>
+            <section class="partners">
+                <a href="#" class="partners-link"></a>
+                <a href="#" class="partners-link"></a>
+                <a href="#" class="partners-link"></a>
+                <a href="#" class="partners-link"></a>
             </section>
         </main>
 
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <section class="footer-above">
+                <article class="footer-above-about">
+                    <a href="#" class="footer-above-about-logo-link">
+                        <img src="" alt="" class="footer-above-about-icon">
+                        <span class="footer-above-about-caption">waxom</span>
+                    </a>
+                    <p class="footer-above-about-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                        diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim
+                        ad minim veniam, quis nostrud exerci suscipit lobortis claritatem.</p>
+                    <a href="#" class="footer-above-about-read-more-link">read more</a>
+                </article>
+                <section class="footer-above-recent">
+                    <span class="footer-above-recent-caption">recent posts</span>
+                    <div class="footer-above-recent_item">
+                        <span class="footer-above-recent_item-date">September 08, 2015</span>
+                        <p class="footer-above-recent_item-text">Lorem ipsum dolor sit amet, consectetuer adipiscing
+                            elit</p>
+                    </div>
+                    <div class="footer-above-recent_splitter"></div>
+                    <div class="footer-above-recent_item">
+                        <span class="footer-above-recent_item-date">September 08, 2015</span>
+                        <p class="footer-above-recent_item-text">Diam nonummy nibh euismod tincidunt ut laoreet dolore
+                            magna</p>
+                    </div>
+                    <div class="footer-above-recent_splitter"></div>
+                    <div class="footer-above-recent_item">
+                        <span class="footer-above-recent_item-date">September 08, 2015</span>
+                        <p class="footer-above-recent_item-text">Claritas est etiam processus dynamicus, qui sequitur
+                            mutationem per seacula quarta decima</p>
+                    </div>
+                </section>
+                <section class="footer-above-twitter">
+                    <span class="footer-above-twitter-caption">our twitter</span>
+                    <p class="footer-above-twitter-text"><a href="#" class="footer-above-twitter-link"></a>@waxom</a>
+                        Cum soluta nobis eleifend option congue nihil imperdiet doming</p>
+                    <span class="footer-above-twitter-time-ago">3 mins ago</span>
+                    <div class="footer-above-twitter-splitter"></div>
+                    <p class="footer-above-twitter-text">Mirum est <a href="#" class="footer-above-twitter-link">#envato</a>notare
+                        quam littera gothica, quam nunc putamus parum anteposuerit litterarum</p>
+                    <span class="footer-above-twitter-time-ago">5 hours ago</span>
+                    <div class="footer-above-twitter-splitter"></div>
+                    <p class="footer-above-twitter-text">Soluta nobis option <a href="#" class="footer-above-twitter-simple-link">bit.ly/1Hniso7</a></p>
+                    <span class="footer-above-twitter-time-ago">20 days ago</span>
+                </section>
+                <section class="footer-above-dribbble">
+                    <span class="footer-above-dribbble-caption">dribble widget</span>
+                    <a href="#" class="footer-above-dribbble-link">
+                        <img src="" alt="" class="footer-above-dribbble-img" width="" height="">
+                    </a>
+                    <a href="#" class="footer-above-dribbble-link">
+                        <img src="" alt="" class="footer-above-dribbble-img" width="" height="">
+                    </a>
+                    <a href="#" class="footer-above-dribbble-link">
+                        <img src="" alt="" class="footer-above-dribbble-img" width="" height="">
+                    </a>
+                    <a href="#" class="footer-above-dribbble-link">
+                        <img src="" alt="" class="footer-above-dribbble-img" width="" height="">
+                    </a>
+                </section>
+            </section>
+
+            <section class="footer-below">
+                <span class="footer-below-copyright">
+                    copyright &copy; 2015
+                    <a href="#" class="footer-below-copyright-link">waxom</a>
+                </span>
+                <a href="#" class="footer-below-link">Privacy Policy</a>
+                <a href="#" class="footer-below-link">FAQ</a>
+                <a href="#" class="footer-below-link">Support</a>
+                <span class="footer-below-designed-by">
+                    Designed by
+                    <a href="#" class="footer-below-designed-by-link">ThemeFire</a>
+                </span>
+                <span class="footer-below-only-on">
+                    Only on
+                    <a href="#" class="footer-below-only-on-link">Envato Market</a>
+                </span>
+            </section>
+        </footer>
     </div>
 
 </body>
