+added fonts +added svg +configured debug mode

--- a/index.html
+++ b/index.html
@@ -34,24 +34,24 @@
             </nav>
             <button class="header-cart"></button>
             <button class="header-search"></button>
-            <section class="header-slider">
-                <section class="header-slider-slogan">
-                    <span class="header-slider-slogan-caption-above">Unique and Modern Design</span>
-                    <span class="header-slider-slogan-caption-below">Portfolio PSD Template</span>
-                    <p class="header-slider-slogan-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
-                        imperdiet doming id quod mazim placerat facer possim assum.</p>
-                    <a href="#" class="header-slider-slogan-button">get started</a>
-                </section>
-                <div class="header-slider-pages">
-                    <a href="#" class="header-slider-pages_item"></a>
-                    <a href="#" class="header-slider-pages_item"></a>
-                    <a href="#" class="header-slider-pages_item"></a>
-                    <a href="#" class="header-slider-pages_item"></a>
-                    <a href="#" class="header-slider-pages_item"></a>
-                </div>
-                <button class="header-slider-arrow-left"></button>
-                <button class="header-slider-arrow-right"></button>
+            <!-- <section class="header-slider"> -->
+            <section class="header-slogan">
+                <span class="header-slogan-caption-above">Unique and Modern Design</span>
+                <span class="header-slogan-caption-below">Portfolio PSD Template</span>
+                <p class="header-slogan-text">Nam liber tempor cum soluta nobis eleifend option congue nihil
+                    imperdiet doming id quod mazim placerat facer possim assum.</p>
+                <a href="#" class="header-slogan-button">get started</a>
             </section>
+            <div class="header-pages">
+                <a href="#" class="header-pages_item"></a>
+                <a href="#" class="header-pages_item"></a>
+                <a href="#" class="header-pages_item"></a>
+                <a href="#" class="header-pages_item"></a>
+                <a href="#" class="header-pages_item"></a>
+            </div>
+            <button class="header-arrow-left"></button>
+            <button class="header-arrow-right"></button>
+            <!-- </section> -->
         </header>
 
         <main>
