--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
                     <li class="header-menu-list_item"><a href="#">contact</a></li>
                 </ul>
             </nav>
-            <button class="header-cart"></button>
-            <button class="header-search"></button>
+            <button class="header-cart"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    width="18px" height="24px" viewBox="0 0 18 24">
+                    <path d="M 15 3C 15 3 13.5 3 13.5 3 13.5 1.34 11.48-0 9-0 6.51-0 4.5 1.34 4.5 3 4.5 3 3 3 3 3 1.35 3 0 4.34 0 6 0 6 0 21 0 21 0 22.65 1.35 23.99 3 23.99 3 23.99 15 23.99 15 23.99 16.65 23.99 17.99 22.65 17.99 21 17.99 21 17.99 6 17.99 6 17.99 4.34 16.65 3 15 3ZM 9 1.5C 10.66 1.5 12 1.96 12 3 12 3 6 3 6 3 6 1.96 7.34 1.5 9 1.5ZM 16.49 21C 16.49 21.82 15.82 22.49 15 22.49 15 22.49 3 22.49 3 22.49 2.17 22.49 1.5 21.82 1.5 21 1.5 21 1.5 19.5 1.5 19.5 1.5 19.5 16.49 19.5 16.49 19.5 16.49 19.5 16.49 21 16.49 21ZM 16.49 18C 16.49 18 1.5 18 1.5 18 1.5 18 1.5 6 1.5 6 1.5 5.17 2.17 4.5 3 4.5 3 4.5 4.5 4.5 4.5 4.5 4.5 4.5 4.5 9 4.5 9 4.5 9 6 9 6 9 6 9 6 4.5 6 4.5 6 4.5 12 4.5 12 4.5 12 4.5 12 9 12 9 12 9 13.5 9 13.5 9 13.5 9 13.5 4.5 13.5 4.5 13.5 4.5 15 4.5 15 4.5 15.82 4.5 16.49 5.17 16.49 6 16.49 6 16.49 18 16.49 18Z" /></svg></button>
+            <button class="header-search"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    width="24px" height="24px" viewBox="0 0 24 24">
+                    <path d="M 23.76 22.68C 23.76 22.68 17.57 16.59 17.57 16.59 19.19 14.82 20.19 12.49 20.19 9.93 20.19 4.44 15.67-0 10.09-0 4.52-0 0 4.44 0 9.93 0 15.42 4.52 19.86 10.09 19.86 12.5 19.86 14.71 19.03 16.45 17.64 16.45 17.64 22.66 23.76 22.66 23.76 22.97 24.06 23.46 24.06 23.76 23.76 24.06 23.46 24.06 22.98 23.76 22.68ZM 10.09 18.33C 5.38 18.33 1.55 14.57 1.55 9.93 1.55 5.29 5.38 1.52 10.09 1.52 14.81 1.52 18.63 5.29 18.63 9.93 18.63 14.57 14.81 18.33 10.09 18.33Z" /></svg></button>
             <!-- <section class="header-slider"> -->
             <section class="header-slogan">
                 <span class="header-slogan-caption-above">Unique and Modern Design</span>
